@@ -3,6 +3,7 @@
 = 2.17.0 =
 * WordPress 6.1 compatible.
 * Fixes potential errors with inconsistent postmeta values obtained for groups protecting posts, using own API method which has been further guarded against inconsistent values.
+* Revised code to use updated API method to obtain read access group IDs instead of accessing via get_post_meta().
 
 = 2.16.2 =
 * Fixes a PHP 8.1 warning related to the passing of a null parameter to version_compare().
